--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,6 @@ body{
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 
 }
