--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -36,8 +36,58 @@
     width: 250px;
     margin: 15px auto;
 }
+.bannerContent h2{
+color:white;
+font-weight:bold;
+font-size:33px;
+width:65%;
+margin:0 auto;
+}
+.bannerContent p{
+    color:white;
+    font-size:20px;
+    margin:0 auto;
+    margin-top:20px;
+    width:50%;
+}
 
 
-@media only screen and (max-widht:768px){
+@media only screen and (max-width:768px){
+    .bannerContent h2 {
+        font-size: 25px;
+        width: 80%;
+    }
+}
+
+
+
+@media only screen and (max-width:500px){
+    .bannerContent h2 {
+        font-size: 20px;
+        width: 100%;
+        padding: 0px 10px;
+    }
+    .bannerContent p {
+        font-size: 15px;
+        margin-top: 2px;
+        width: 100%;
+        padding: 20px;
+    }
+    .banner{
+        height:500px;
+    }
+    .bannerBtn {
+        width: 196px;
+        height: 38px;
+        border-radius: 20px;
+        align-items: center;
+        font-size: 14px;
+    }
+    .buttonWrap {
+        width: 200px;
+        margin-top: 1px;
+    }
+
+
 
 }
