--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,6 @@ body{
     overflow-x: hidden;
 
 }
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root.Mui-expanded:first-of-type {
+    border-left: 5px solid red !important;
+}
