--- a/src/pages/Shared/Footer/Footer.css
+++ b/src/pages/Shared/Footer/Footer.css
@@ -16,9 +16,7 @@
     justify-content: space-between;
     flex-wrap:wrap;
 }
-.contactUs div{
-    margin-right:20px;
-}
+
 .footerTop{
     display: flex;
     justify-content:space-between;
@@ -65,7 +63,12 @@
     justify-content: space-between;
     align-items: center;
 }
-
+.socialIcon{
+    width:30px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 100%;
+}
 
 @media only screen and (max-width:1024px){
     .footerWrap{
@@ -82,6 +85,9 @@
         justify-content:center
     
     }
+    .contactUs {
+        padding-left: 36px;
+    }
 }
 
 @media only screen and (max-width:500px){
@@ -97,7 +103,10 @@
     .copyRight p{
         font-size: 14px;
     }
-    .copyRight {
+    .copyRight, .contactUs {
         display: block;
+    }
+    .contactUs {
+        padding-left: 20px;
     }
 }
