--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -34,9 +34,11 @@
     top:80px;
     text-align: center;
 }
-.services{
+.singleServicesWrap{
     width:1300px;
     margin:0 auto;
+}
+.services{
     display: flex;
     justify-content: space-between;
 }
@@ -48,16 +50,146 @@
     font-weight: bold;
     color: #F87015;
 }
-.servicesLeftSide p{
+
+
+.singleService{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    width:350px;
+    padding: 20px;
+}
+.card{
+    width:400px;
+    height: 400px;
+    margin:0 auto;
+    perspective: 1000px;
+    cursor: pointer;
+    transition:all .5s ease;
+    transform-style: preserve-3d;
+}
+.inner-box{
+    position: relative;
+    width:100%;
+    height: 100%;
+    text-align: center;
+    border-radius: 10px;
+    transition:transform 1s;
+    transform-style: preserve-3d;
 
 }
+.card-front, .card-back{
+    position:absolute;
+    width:100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 30px;
+}
+.card-front{
+    background-size: cover;
+    background-position: center;
+}
+.card-front1{
+    background-image: linear-gradient(rgba(248,112,21, .9),rgba(248,112,21, .9)), url(../../../public//assets//ecommerce.png);
+}
+.card-front2{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../public//assets/education.png);
+}
+.card-front3{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../public//assets/blog.png);
+}
+.card-front4{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../public//assets/corporate.png);
+}
+.card-front5{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../public//assets/travel.png);
+}
+.card-front6{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../public//assets/news.png);
+}
+.card h3, .card .card-back-content{
+   position: absolute;
+   left:50%;
+   top:50%;
+   transform: translate(-50%, -50%);
+   width: 100%;
+}
+.card-back{
+    background-color: #951FE8;
+    transform: rotateX(180deg);
+   
 
+    
+}
+
+.card:hover .inner-box{
+    transform: rotateX(-180deg);
+}
+
+.whatWeDo h2{
+    font-size: 150px;
+    font-weight:400;
+
+}
+.whatWeDo p{
+    float: right;
+    width: 600px;
+    font-size: 25px;
+}
+.products{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.products h2{
+    font-size: 50px;
+}
+.products p{
+    line-height: 32px;
+}
+.productLeftSide{
+    width:45%
+} 
+
+.productRightSide{
+    width:55%
+}
+.singleRelatedService{
+    width:400px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    padding: 30px 20px;
+    border-radius: 10px;
+    height: 500px;
+    overflow: hidden;
+}
+.singleRelatedService img{
+    width: 100%;
+    object-fit: cover;
+    height: 250px;
+}
+.relatedServiceHead h2{
+    border-bottom: 3px solid red;
+    width:400px;
+    padding-bottom:10px;
+}
 
 
 
 @media only screen and (max-width:1024px){
     .servicesWrap{
         width:100%;
+    }
+    .singleServicesWrap{
+        width: 100%;
+        padding: 0px 20px;
+    }
+    .services {
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .servicesLeftSide {
+        width: 100%;
     }
     .servicesContent{
         position: absolute;
@@ -76,6 +208,9 @@
         margin:0 auto;
         padding:0px 10px;
     }
+    .card, .singleRelatedService  {
+        width: 320px;
+    }
 }
 
 @media only screen and (max-width:768px){
@@ -85,8 +220,11 @@
        align-items: center;
 
     }
-    .serviceContentLeftSide, .serviceContentRightSide{
+    .serviceContentLeftSide, .serviceContentRightSide, .productRightSide, .servicesLeftSide{
         width:100%;
+    }
+    .productRightSide{
+        margin-top:50px;
     }
     .serviceContentLeftSide h3{
         font-size: 20px;
@@ -96,9 +234,6 @@
         flex-wrap: wrap;
         justify-content: center;
     }
-    .servicesLeftSide{
-        width:100%;
-    }
     .servicesWrap {
         height: 300px;
     }
@@ -107,5 +242,34 @@
     }
     .servicesLeftSide h3 {
         font-size: 20px;
+    }
+    .card {
+        width: 350px;
+    }
+    .products {
+        display: block;
+    }
+    .productLeftSide{
+        width:100%;
+    }
+    .whatWeDo h2 {
+        font-size: 80px;
+    }
+    .singleRelatedService {
+        width: 340px;
+        overflow: hidden;
+    }
+    .relatedServiceHead h2 {
+        width: 100%;
+    }
+}
+
+
+@media only screen and (max-width:500px){
+    .whatWeDo p {
+        width: 100%;
+    }
+    .whatWeDo h2 {
+        font-size: 54px;
     }
 }
