--- a/src/pages/Services/TopServices/TopServices.css
+++ b/src/pages/Services/TopServices/TopServices.css
@@ -1,7 +1,18 @@
-
+.topServicesWrap{
+    width:1300px;
+    margin:0 auto;
+}
+.animation{
+    width:100%;
+}
 
 .arrowWrap{
     display: flex;
+    margin-left: 85px;
+    margin-top: -50px;
+    cursor: pointer;
+    z-index: 99;
+    position: relative;
 }
 .topServiceContent, .topServiceRight{
     width:50%;
@@ -16,4 +27,51 @@
     width: 100%;
     height: 60%;
     object-fit: cover;
+}
+.topServicesLeft{
+    width:50%
+}
+.leftArrow{
+    width: 50px;
+    height: 35px;
+    background: #F87015;
+    display: grid;
+    place-items: center;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-right: 1px solid #fff;
+}
+.rightArrow{
+    width: 50px;
+    height: 35px;
+    background: #F87015;
+    display: grid;
+    place-items: center;
+    border-top-right-radius: 17px;
+    border-bottom-right-radius: 17px;
+   
+}
+.leftArrowIcon{
+    transform: rotate(225deg);
+    color:white;
+}
+.rightArrowIcon {
+    transform: rotate(49deg);
+    color:white;
+}
+.relatedServiceHead h2{
+    border-bottom: 3px solid red;
+    width:400px;
+    padding-bottom:10px;
+}
+
+@media only screen and (max-width:1300px){
+    .topServicesWrap{
+        width:100%;
+    }
+}
+@media only screen and (max-width:768px){
+    .relatedServiceHead h2 {
+        width: 100%;
+    }
 }
