--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,34 @@ body{
     background-color: #951FE8 !important;
     height: 100% !important;
 }
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected{
+    position: relative
+    
+ }
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected::after{
+    position: absolute;
+    content: '';
+    width: 0;
+    height: 0;
+    margin: 0 auto;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 10px solid #F87015;
+    bottom: -1px;
+    z-index: 99 !important;
+    transform: rotate(56deg);
+
+
+}
+.css-1aquho2-MuiTabs-indicator {
+    background-color: #F87015 !important;
+}
+.css-1ujnqem-MuiTabs-root {
+    width: 1200px;
+    margin: 0 auto;
+}
+
 
 
 @media only screen and (max-width:768px){
@@ -40,6 +68,11 @@ body{
         display: flex !important;
         flex-direction: row !important;
     }
+    .css-1ujnqem-MuiTabs-root {
+        width: 100% !important;
+        flex-wrap: wrap !important;
+    }
+    
 }
 @media only screen and (max-width:500px){
     .css-lfwcke-MuiTabs-flexContainer {
