--- a/src/pages/Home/ChoosUs/Choos.css
+++ b/src/pages/Home/ChoosUs/Choos.css
@@ -82,6 +82,23 @@
    justify-content: center !important;
    align-items: center !important;
 }
+
+.choocesWrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.chooseLeftSide{
+    flex-basis: 600px;
+}
+
+.singleProduct{
+    width:400px;
+    aspect-ratio: 1/1;
+    background:red;
+    color: white;
+}
+
 @media only screen and (max-width:1024px){
     .choosWrap{
         width:100%;
