--- a/src/pages/Home/TimeLine/TimeLine.css
+++ b/src/pages/Home/TimeLine/TimeLine.css
@@ -1,4 +1,5 @@
 
+
   .timeline {
     position: relative;
     max-width: 1200px;
@@ -143,6 +144,7 @@
     object-fit: cover;
 }
 
+
   @media only screen and (max-width: 768px) {
  
  
@@ -156,6 +158,7 @@
       width: 100%;
       padding-left: 80px;
       padding-right: 25p;
+      border: none;
     }
     .rightContainer {
       left: 0;
@@ -172,3 +175,9 @@
     }
   }
   
+@media only screen and (max-width:500px){
+  .container {
+    padding-left: 23px;
+    padding-right: 0px;
+}
+}
