--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -11,6 +11,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 74%, 62% 85%, 32% 91%, 0 79%, 0 15%);
     
 }
+
 .servicesWrap:after{
     content: '';
     position:absolute;
@@ -21,6 +22,7 @@
     opacity: 0.8;
 
 }
+
 .servicesContent{
     position: absolute;
     display: flex;
@@ -114,14 +116,12 @@
 }
 .card-back{
     background-color: #951FE8;
-    transform: rotateX(180deg);
-   
-
+    transform: rotateY(180deg);
     
 }
 
 .card:hover .inner-box{
-    transform: rotateX(-180deg);
+    transform: rotateY(-180deg);
 }
 
 .whatWeDo h2{
