--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -76,7 +76,6 @@
 
 @media only screen and (max-width:500px){
     .reviewContent {
-        /* margin-left: 30px; */
         width: 100%;
     }
     .reviewContent p{
@@ -87,7 +86,13 @@
         height: 40px;
     }
     .thumbnail {
-        margin-top: 20px;
-        justify-content: flex-end;
+        margin-top: -37px;
     }
+}
+
+@media only screen and (max-width: 3750px){
+.thumbnail {
+    margin-top: -66px;
+    width: 315px !important;
+}
 }
