--- a/src/pages/Home/Services/Services.css
+++ b/src/pages/Home/Services/Services.css
@@ -9,9 +9,13 @@
     place-items: center;
     margin: 70px 0;
 }
+.cardsWrap {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 .cards{
     width: 270px;
-    height: 220px;
+    height: 190px;
     margin: 10px auto;
     perspective: 1000px;
     cursor: pointer;
@@ -21,6 +25,14 @@
     margin-left: 10px;
    
 
+}
+.cards:nth-child(2){
+    position:relative;
+    top:100px;
+}
+.cards:nth-child(4){
+    position:relative;
+    top:100px;
 }
 .inner-box{
     position: relative;
@@ -78,21 +90,24 @@ object-fit: cover;
  .ourServicesRightSide::before{
     position: absolute;
     width: 100%;
-    height: 85%;
+    height: 100%;
     content: '';
     background-color: #EBF7EB;
     left: -5px;
-    top: -63px;
+    top: 13px;
     z-index: -3;
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-    animation: move 5s linear infinite;
+    clip-path: polygon(30% 0%, 50% 15%, 70% 0%, 90% 10%, 100% 35%, 80% 70%, 50% 100%, 20% 70%, 0% 35%, 10% 10%);
+     animation: move 15s linear infinite;
  }
  @keyframes move {
-    from{
+    0%{
         transform: translateX(0);
     }
-    to{
-        transform: translateX(-200px);
+    50%{
+        transform: translateX(-700px);
+    }
+    100%{
+        transform: translateX(0);
     }
     
  }
@@ -110,8 +125,23 @@ object-fit: cover;
         text-align: center;
     }
  }
- @media only screen and (maax-width:500px){
+ @media only screen and (max-width:500px){
     .ourServiceLeftSide {
         width: 100%;
     }
+    .cardsWrap {
+        grid-template-columns: auto;
+    }
+    .cards:nth-child(2), .cards:nth-child(4){
+        position: initial;
+    }
+ 
+ }
+ @media only screen and (max-width: 375px){
+.ourServiceLeftSide {
+    padding-left: 20px;
+}
+.titleWrap {
+    padding-left: 20px;
+}
  }
