--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -21,8 +21,8 @@
     background-color: #006BA3 !important;
 }
 .socialIcon:nth-child(3){
-    background-color: #fff !important;
-    color:#F76300;
+    background-color: #00acee  !important;
+    color:#fff;
 }
 .socialIcon:nth-child(4){
     background-color: #B91D1C !important;
