--- a/src/components/Banner/HeroSection/HeroSection.css
+++ b/src/components/Banner/HeroSection/HeroSection.css
@@ -1,3 +1,5 @@
+
+
 @keyframes animate_left {
   0% {
     opacity: 0;
@@ -23,19 +25,30 @@
 }
 @keyframes heroBackground {
     0% {
-        background: linear-gradient(0deg, #951fe8, #f87015);
+      background-position: 0% 50%;
     }
   
-    100% {
-        background: linear-gradient(50deg, #f87015, #951fe8);
+    50% {
+      background-position: 100% 50%;
     }
+    100% {
+      background-position: 0% 50%;
+  }
   }
 .header {
+  
   width: 100%;
   height: 85vh;
   position: relative;
-  background: linear-gradient(to right, #951fe8, #f87015);
-  animation: heroBackground 0 10s linear infinite;
+background: radial-gradient(farthest-side at 80% 80%, #FF333D, #F87015, #541283fb, #F87015, #951FE8, #F87015);
+  animation: heroBackground 20s ease-in-out infinite;
+  background-size: 300% 300%;
+ 
+
+}
+.navsBarWrap{
+  width:1300px;
+  margin:0 auto;
 }
 
 .header:before {
@@ -55,16 +68,9 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 30px;
+  align-items: center;
 }
 
-.navbar-list {
-  display: flex;
-  color: white;
-}
-.navbar-list li {
-  margin-left: 16px;
-  margin-right: 16px;
-}
 
 .header-content {
   width: 100%;
@@ -76,8 +82,9 @@
     top:50px
 }
 
-.header-content div {
-  width: 50%;
+.header-content .right-side, .header-content .left-side {
+  width: 650px;
+  margin: 0 au;
 }
 
 .left-side {
@@ -125,4 +132,81 @@
 }
 .right-side img {
   width: 500px;
+}
+
+@media only screen and (max-width:1024px){
+  .navsBarWrap{
+    width:100%;
+  }
+  .header:before {
+    clip-path: polygon(0px 10%, 0 100%, 100% 100%);
+    
+  }
+  .header {
+    height: 95vh;
+  }
+  .left-side h1 {
+    font-size: 45px;
+}
+.navbar-list{
+  display: none;
+}
+.right-side {
+  width:400px !important;
+ }
+
+
+.right-side img {
+  width: 100%;
+  object-fit: cover;
+}
+.left-side {
+  padding-top: 100px;
+  padding-left: 0px;
+  width: 600px !important;
+  padding-right: 111px;
+}
+
+}
+
+@media only screen and (max-width:768px){
+  .left-side {
+    padding-top: 55px;
+    padding-left: 0px;
+    width: 400px;
+    padding-right: 66px;
+  }
+  .left-side h1 {
+    font-size: 38px;
+}
+
+}
+
+@media only screen and (max-width:500px){
+
+.header {
+  height: 100%;
+}
+.header-content {
+  flex-direction: column-reverse;
+}
+.header-content .right-side, .header-content .left-side {
+  width: 100% !important;
+}
+.left-side {
+  padding: 0 20px !important;
+  margin-top: 65px;
+}
+.ExploreBtn {
+  width: 137px;
+  padding: 5px;
+}
+
+
+}
+
+@media only screen and (max-width:400px){
+  .left-side h1 {
+    font-size: 32px;
+}
 }
