--- a/src/pages/Home/CountDown/CountDown.css
+++ b/src/pages/Home/CountDown/CountDown.css
@@ -1,13 +1,15 @@
 .portFolioExample{
     width:1300px;
-    margin:95px auto;
+    margin:200px auto;
 }
 .countDownWrap{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     place-items: center;
     margin-bottom: 120px;
-    gap: 20px;
+    gap: 0px;
+    width: 1000px;
+    margin: 0 auto;
 }
 .countdown{
     display: flex;
@@ -15,23 +17,41 @@
     justify-content: center;
     text-align: center;
     align-items: center;
-    width: 300px;
+    width: 200px;
     aspect-ratio: 1/1;
-    border-radius: 18px;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
+    transition: all .9s cubic-bezier(0.54, 0.49, 0.83, 0.76);
+    
+}
+.countdown:hover{
+    background:#951FE8;
+    color:white;
+}
+.countdown:hover .singleCountDown{
+    color:white !important;
+}
+.countdown:nth-child(1), .countdown:nth-child(3){
+position: relative;
+top:-50px;
+}
+.countdown:nth-child(3){
+    position: relative;
 }
 .singleCountDown{
     display: flex;
     color: #951FE8;
-    font-size: 100px;
+    font-size: 75px;
     font-weight: bold;
+    transition: all .9s cubic-bezier(0.54, 0.49, 0.83, 0.76);
 
 }
 
 @media only screen and (max-width:1024px){
     .portFolioExample {
         width: 100%;
+        padding-left: 15px;
     }
     .countDownWrap {
         gap: 1px;
@@ -47,8 +67,9 @@
 @media only screen and (max-width:768px){
     .countDownWrap {
         grid-template-columns: repeat(3, 1fr);
-        gap:15px;
+        width: 100%;
     }
+    
     .singleCountDown {
         display: flex;
         color: #951FE8;
@@ -59,11 +80,21 @@
 @media only screen and (max-width:500px){
     .countDownWrap {
         grid-template-columns: repeat(2, 1fr);
+        gap:20px;
     }
     .countdown {
-        width: 150px;
+        width: 170px;
     }
     .singleCountDown {
         font-size: 50px;
+    }
+    .portFolioExample {
+        width: 100%;
+        padding-left: 15px;
+    }
+}
+@media only screen and (max-width:400px){
+    .portFolioExample {
+        padding-left: 3px;
     }
 }
