--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -1,9 +1,32 @@
+.portfolioHeroSection {
+    width: 100%;
+    height: 65vh;
+    position: relative;
+    /* background: linear-gradient(to bottom, #f87015, #951fe8); */
+  background: radial-gradient(farthest-side at 80% 80%, #FF333D, #F87015, #541283fb, #F87015, #951FE8, #F87015);
+    animation: heroBackground 20s ease-in-out infinite;
+    background-size: 300% 300%;
+    /* background: linear-gradient(45deg , #F87015 20%, #FF333D 20%, #90E0FF 20%, #951FE8 30%); */
+  
+  }
+.portfolioHeroSection:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background: white;
+    left: 0;
+    bottom: 0;
+    clip-path: polygon(0px 10%, 0 100%, 100% 100%);
+    
+  }
 .portfolioWrap{
     width:1300px;
     height:auto;
     margin: 30px auto;
     
 }
+
 .tabWrap{
     width: 100%;
     margin: 0 auto;
