--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,29 +1,30 @@
 
-.servicesWrap{
+.servicessWraps{
+    width: 100%;
+    height: 85vh;
+    position: relative;
+    clip-path: polygon(0% 57%, 49% 80%, 100% 55%, 100% 0%, 0% 0%);
     background-image: url('../../../public/assets/web2.jpg');
-    width: 100vw;
-    height:450px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position:center;
-    position:relative;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 74%, 62% 85%, 32% 91%, 0 79%, 0 15%);
-    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 74%, 62% 85%, 32% 91%, 0 79%, 0 15%);
+    
+   
+
     
 }
-
-.servicesWrap:after{
+.servicessWraps::after{
     content: '';
     position:absolute;
     width:100%;
     height: 100%;
-    background:black;
-    z-index: 99;
+    background: linear-gradient(to right, #541283fb, #ff5400);
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    z-index: -5;
     opacity: 0.8;
-
 }
 
-.servicesContent{
+.servicesContents{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -33,7 +34,7 @@
     margin: 0 auto;
     color:white;
     padding:0px 20px;
-    top:80px;
+    top:150px;
     text-align: center;
 }
 .singleServicesWrap{
