--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -1,37 +1,50 @@
-.navbar{
-    width:1300px;
-    height:80px;
+
+.navbar-list {
+  display: flex;
+  color: white;
 }
-.menubar ul{
-    display: flex;
-    justify-content: space-center;
-    align-items: center;
+.logo{
+  color:white;
 }
-.menubar ul li{
-    margin-right:30px;
-    font-size:16px;
-    font-weight:bold;
-    transition: all .5s ease-in-out;
-    border-width: 0px;
-    position: relative;
+.navbar-list li {
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 20px;
+  font-weight: bold;
+  position:relative;
+
+}
+.sticky{
+width:1300px;
+margin:0 auto;
+background:white;
+color:black;
+box-shadow: #F87015 0px 5px 15px;
+position:fixed;
+top:0;
+left:0;
+right:0;
+z-index: 99999;
+	
+}
+.sticky .navbar-list, .sticky .logo {
+  color:#F87015 !important;
 }
 
-.menubar ul li::after{
- content: '';
- position: absolute;
- width:0px;
- height: 1px;
- background-color: #F76300;
- left: 0;
- bottom: 0;;
- transition: all .5s ease-in-out;
-}
-.menubar ul li:hover::after{
-  width:100%;
-}
-.menubar ul li:hover{
-  width:100%;
-  color: #F76300;
+.navbar-list li::after{
+  content: '';
+  position: absolute;
+  width:0%;
+  height: 1px;
+  background-color: #F76300;
+  left: 0;
+  bottom: 0;;
+  transition: all .5s ease-in-out;
+ }
+
+.navbar-list li:hover::after{
+  width:90%;
+  border-bottom:1px solid white;
 }
 .bar{
     display: none;
@@ -67,6 +80,7 @@
         position: absolute;
         top: 20px;
         right: 10px;
+       
       }
       .bar div{
         position:relative;
@@ -75,10 +89,13 @@
       .bar span {
         width: 30px;
         height: 2px;
-        background: #FF5400;
+        background: #fff;
         margin-bottom: 6px;
         display: block;
         transition: all .5s linear(-0.47 -53.68%, 1 100%);
+      }
+      .sticky .bar span{
+        background-color:#F76300;
       }
       .bar1{
         transform: rotate(-45deg);
