--- a/src/pages/Home/TimeLine/TimeLine.css
+++ b/src/pages/Home/TimeLine/TimeLine.css
@@ -1,12 +1,10 @@
 
-.timeLinesWraps{
-  width:1300px;
-  margin:0 auto;
-}
+
   .timeline {
     position: relative;
-    max-width: 1200px;
-    margin: 100px auto;
+    max-width: 1300px;
+    margin: 50px auto;
+    padding:0 35px;
   }
   .container {
     padding: 10px;
@@ -150,7 +148,6 @@
 @media only screen and (max-width: 1024px) {
   .timeLinesWraps{
     width:100%;
-    padding: 0 30px;
   }
     .timeline {
      width:100%;
@@ -194,7 +191,10 @@
     padding-left: 23px;
     padding-right: 0px;
 }
-.textBox .textBoxImg {
-  width: 65%;
+.timeline {
+  padding:0 20px;
+}
+.textBox {
+  width: 100%;
 }
 }
