--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -2,6 +2,7 @@
     width: 1300px;
     margin: 0 auto;;
     overflow: hidden;
+    padding:0 35px;
 }
 
 .swiperWrap{
@@ -71,6 +72,7 @@
 @media only screen and (max-width:1024px){
     .reviewSliderWrap{
         width: 100%;
+        padding:0 10px;
     } 
 }
 
@@ -86,13 +88,14 @@
         height: 40px;
     }
     .thumbnail {
-        margin-top: -37px;
+        margin-top: -52px !important;
     }
 }
 
 @media only screen and (max-width: 3750px){
 .thumbnail {
-    margin-top: -66px;
-    width: 315px !important;
+    margin-top: 10px !important;
+    float: none;
+    margin-left: 34px !important;
 }
 }
