--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body{
     width:40px;
     height:40px;
     background:red;
+    
 
  }
 .react-tabs__tab-list {
@@ -33,6 +34,7 @@ body{
 .css-10d9dml-MuiTabs-indicator {
     background-color: #951FE8 !important;
     height: 100% !important;
+    display: none !important;
 }
 .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected{
     position: relative
@@ -51,6 +53,7 @@ body{
     bottom: -1px;
     z-index: 99 !important;
     transform: rotate(56deg);
+ display: none !important;
 
 
 }
@@ -65,13 +68,23 @@ body{
 .rfm-marquee-container {
     padding-top:80px !important;
    }
+   .css-jpln7h-MuiTabs-scroller {
+    overflow-x: hidden !important;
+   
+}
 
-
-@media only screen and (max-width:768px){
+@media only screen and (max-width:1024px){
     .css-lfwcke-MuiTabs-flexContainer {
         display: flex !important;
         flex-direction: row !important;
+        justify-content: center !important;
+        align-items: center !important;
     }
+   
+    
+}
+@media only screen and (max-width:768px){
+
     .css-1ujnqem-MuiTabs-root {
         width: 100% !important;
         flex-wrap: wrap !important;
