--- a/src/pages/About/Director.css
+++ b/src/pages/About/Director.css
@@ -1,5 +1,23 @@
 
 
+.aboutTimeLine {
+  position: relative;
+  max-width: 1300px;
+  margin: 50px auto;
+  padding:0 35px;
+}
+.aboutTimeLine::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background: #F97015;
+  top: 0;
+  left: 50%;
+  margin-left: -3px;
+  z-index: -1;
+  animation: moveline 6s linear forwards;
+}
   .aboutContainer {
     padding: 10px;
     position: relative;
@@ -13,10 +31,13 @@
     border:none;
    
   }
-  .aboutContainer .imgWrap{
-    width:100%;
-    
+.imgWrap {
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    overflow: hidden;
   }
+
   .imgWrap img{
     width:100%;
     height:100%;
@@ -63,6 +84,13 @@
   }
 
   @media only screen and (max-width: 768px) {
+    .aboutTimeLine {
+      width:100%;
+     }
+
+    }
+
+  @media only screen and (max-width: 768px) {
  
     .aboutContainer {
         width: 100%;
@@ -70,6 +98,9 @@
       }
       .aboutLeftContainer {
         left: 27px;
+    }
+    .aboutTimeLine::after {
+      left: 31px;
     }
 
     }
@@ -84,5 +115,8 @@
     .aboutContainer:nth-child(3),   .aboutContainer:nth-child(1),   .aboutContainer:nth-child(5) {
         width: 90% !important;
         height: 90%;
+    }
+    .imgWrap:nth-child(1) {
+    margin-top:120px;
     }
     }
