--- a/src/pages/Home/CountDown/CountDown.css
+++ b/src/pages/Home/CountDown/CountDown.css
@@ -1,6 +1,7 @@
 .portFolioExample{
     width:1300px;
-    margin:200px auto;
+    margin:150px auto;
+    padding:0 35px;
 }
 .countDownWrap{
     display: grid;
@@ -75,6 +76,11 @@ top:-50px;
         color: #951FE8;
         font-size: 70px;
         font-weight: bold;
+    }
+    .portFolioExample{
+      margin-top:100px;
+      padding:0 10px;
+
     }
 }
 @media only screen and (max-width:500px){
