--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,27 +1,23 @@
 
 .servicessWraps{
     width: 100%;
-    height: 85vh;
+    height: 55vh;
     position: relative;
-    clip-path: polygon(0% 57%, 49% 80%, 100% 55%, 100% 0%, 0% 0%);
-    background-image: url('../../../public/assets/web2.jpg');
-    
-   
-
-    
+    background-image: url('../../../public/assets/web2.jpg');  
 }
 .servicessWraps::after{
     content: '';
-    position:absolute;
-    width:100%;
+    position: absolute;
+    width: 100%;
     height: 100%;
     background: linear-gradient(to right, #541283fb, #ff5400);
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-    z-index: -5;
-    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 9;
+    opacity: .9;
+    /* clip-path: polygon(0% 57%, 49% 80%, 100% 55%, 100% 0%, 0% 0%); */
 }
 
 .servicesContents{
@@ -40,6 +36,8 @@
 .singleServicesWrap{
     width:1300px;
     margin:0 auto;
+  padding:35px;
+
 }
 .services{
     display: flex;
@@ -242,9 +240,7 @@
     .card {
         width: 350px;
     }
-    .products {
-        display: block;
-    }
+ 
     .productLeftSide{
         width:100%;
     }
@@ -269,4 +265,11 @@
     .servicesContent {
         top: -47px;
     }
+    .products {
+     flex-direction: column-reverse;
+    }
+    .productLeftSide, .productRightSide{
+        width:320px;
+    }
 }
+
