--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -1,3 +1,16 @@
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px;
+  align-items: center;
+  z-index: 999999;
+  top:0;
+  left:0;
+  right:0;
+  position: relative;
+
+}
 
 .navbar-list {
   display: flex;
@@ -18,6 +31,7 @@
 width:1300px;
 margin:0 auto;
 background:white;
+width:100%;
 color:black;
 box-shadow: #F87015 0px 5px 15px;
 position:fixed;
@@ -49,6 +63,9 @@ z-index: 99999;
 .bar{
     display: none;
 }
+.mobileMenu, .mobileMenuActive{
+  display: none;
+}
 
 
 @media only screen and (max-width:1024px){
@@ -62,9 +79,32 @@ z-index: 99999;
 
 }
 @media only screen and (max-width:768px){
-    .menubar{
-        display: none;
-       }
+  .navbar-list{
+    display: none;
+  }
+  .mobileMenu, .mobileMenuActive{
+    position: absolute;
+    width: 300px;
+    height: 100vh;
+    background: white;
+    color: #F76300;
+    top: -19px;
+    left: -350px;
+    padding-top: 50px;
+    display: block;
+    z-index: 999;
+    padding-left: 20px;
+    transition: all .5s cubic-bezier(0.46, 0.38, 0.52, 0.46);
+    box-shadow: #F76300 0px 5px 15px;
+  }
+  .mobileMenuActive{
+    left: 0px !important;
+  }
+.mobileMenu li, .mobileMenuActive li{
+  margin-bottom: 18px;
+
+}
+    
     .bar {
         padding: 0px !important;
         text-align: left !important;
