--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body{
     margin:0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     font-family: 'Josefin Sans', sans-serif;
 
 }
