--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -1,164 +1,152 @@
 .navbar {
-  width: 100%;
+  width: 1300px;
   display: flex;
   justify-content: space-between;
   padding: 20px 30px;
   align-items: center;
   z-index: 999999;
-  top:0;
-  left:0;
-  right:0;
+  top: 0;
+  left: 0;
+  right: 0;
   position: relative;
-
 }
 
 .navbar-list {
   display: flex;
   color: white;
 }
-.logo{
-  color:white;
+.logo {
+  color: white;
 }
 .navbar-list li {
   margin-left: 15px;
   margin-right: 15px;
   font-size: 20px;
   font-weight: bold;
-  position:relative;
-
+  position: relative;
 }
-.sticky{
-width:100%;
-margin:0 auto;
-background:white;
-width:100%;
-color:black;
-box-shadow: #F87015 0px 5px 15px;
-position:fixed;
-top:0;
-left:0;
-right:0;
-z-index: 99999;
-	
-}
-.sticky .navbar-list, .sticky .logo {
-  color:#F87015 !important;
-}
-
-.navbar-list li::after{
-  content: '';
-  position: absolute;
-  width:0%;
-  height: 1px;
-  background-color: #F76300;
+.sticky {
+  width: 1300px;
+  margin: 0 auto;
+  background: white;
+  width: 100%;
+  color: black;
+  box-shadow: #f87015 0px 5px 15px;
+  position: fixed;
+  top: 0;
   left: 0;
-  bottom: 0;;
-  transition: all .5s ease-in-out;
- }
+  right: 0;
+  z-index: 99999;
+}
+.sticky .navbar-list,
+.sticky .logo {
+  color: #f87015 !important;
+}
 
-.navbar-list li:hover::after{
-  width:90%;
-  border-bottom:1px solid white;
+.navbar-list li::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  background-color: #f76300;
+  left: 0;
+  bottom: 0;
+  transition: all 0.5s ease-in-out;
 }
-.bar{
-    display: none;
+
+.navbar-list li:hover::after {
+  width: 90%;
+  border-bottom: 1px solid white;
 }
-.mobileMenu, .mobileMenuActive{
+.bar {
+  display: none;
+}
+.mobileMenu,
+.mobileMenuActive {
   display: none;
 }
 
-
-@media only screen and (max-width:1024px){
-    .navbar{
-        width:100%;
-       
-    }
-    
-    
-    
-
-}
-@media only screen and (max-width:768px){
-  .navbar-list{
+@media only screen and (max-width: 1024px) {
+  .navbar,
+  .sticky {
+    width:100%;
+  }
+  .navbar-list {
     display: none;
   }
-  .mobileMenu, .mobileMenuActive{
-    position: absolute;
-    width: 300px;
+  .mobileMenu,
+  .mobileMenuActive {
+    position: fixed;
+    width: 250px;
     height: 100vh;
     background: white;
-    color: #F76300;
+    color: #f76300;
     top: -19px;
     left: -350px;
     padding-top: 50px;
     display: block;
     z-index: 999;
     padding-left: 20px;
-    transition: all .5s cubic-bezier(0.46, 0.38, 0.52, 0.46);
-    box-shadow: #F76300 0px 5px 15px;
+    transition: all 0.5s cubic-bezier(0.46, 0.38, 0.52, 0.46);
+    box-shadow: #f76300 0px 5px 15px;
+    z-index: 99999999999;
   }
-  .mobileMenuActive{
+  .mobileMenuActive {
     left: 0px !important;
   }
-.mobileMenu li, .mobileMenuActive li{
-  margin-bottom: 18px;
+  .mobileMenu li,
+  .mobileMenuActive li {
+    margin-bottom: 18px;
+  }
 
+  .bar {
+    padding: 0px !important;
+    text-align: left !important;
+    width: 49px;
+    height: 46px;
+    line-height: 50px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
+    position: absolute;
+    top: 20px;
+    right: 10px;
+  }
+  .bar div {
+    position: relative;
+  }
+  .bar span {
+    width: 30px;
+    height: 2px;
+    background: #fff;
+    margin-bottom: 6px;
+    display: block;
+    transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
+  }
+  .sticky .bar span {
+    background-color: #f76300;
+  }
+  .bar1 {
+    transform: rotate(-45deg);
+    position: absolute;
+    top: -2px;
+    left: -12px;
+    transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
+  }
+  .bar2 {
+    display: none;
+    position: absolute !important;
+    display: none !important;
+    transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
+  }
+  .bar3 {
+    transform: rotate(45deg);
+    position: absolute;
+    top: -2px;
+    right: -18px;
+    transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
+  }
 }
-    
-    .bar {
-        padding: 0px !important;
-        text-align: left !important;
-        width: 49px;
-        height: 46px;
-        line-height: 50px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        transition: all .5s linear(-0.47 -53.68%, 1 100%);
-        position: absolute;
-        top: 20px;
-        right: 10px;
-       
-      }
-      .bar div{
-        position:relative;
-      
-      }
-      .bar span {
-        width: 30px;
-        height: 2px;
-        background: #fff;
-        margin-bottom: 6px;
-        display: block;
-        transition: all .5s linear(-0.47 -53.68%, 1 100%);
-      }
-      .sticky .bar span{
-        background-color:#F76300;
-      }
-      .bar1{
-        transform: rotate(-45deg);
-          position: absolute;
-          top: -2px;
-          left: -12px;
-          transition: all .5s linear(-0.47 -53.68%, 1 100%);
-      }
-      .bar2{
-        display: none;
-        position: absolute !important;
-        display: none !important;
-        transition: all .5s linear(-0.47 -53.68%, 1 100%);
-      }
-      .bar3{
-        transform: rotate(45deg);
-        position: absolute;
-        top: -2px;
-        right: -18px;
-        transition: all .5s linear(-0.47 -53.68%, 1 100%);
-      }
-    
-    
-
-}
-
