--- a/src/index.css
+++ b/src/index.css
@@ -96,4 +96,16 @@ body{
         flex-wrap: wrap;
         justify-content: center;
     }
+    .css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
+        font-size: 10px !important;
+        line-height: -3px !important;
+        min-width: 40px !important;
+        background: #F87015 !important;
+        margin-left: 5px !important;
+        margin: 2px !important;
+        min-height: 34px !important;
+        color: white !important;
+        border-radius: 3px !important;
+    }
+    
 }
