--- a/src/pages/Services/TopServices/TopServices.css
+++ b/src/pages/Services/TopServices/TopServices.css
@@ -113,4 +113,8 @@
         margin-left: 22px;
         margin-top: 27px;
     }
+    .topServicesWrap {
+        padding: 0px 10px;
+        margin-bottom: 45px;
+      }
 }
