--- a/src/components/Banner/HeroSection/HeroSection.css
+++ b/src/components/Banner/HeroSection/HeroSection.css
@@ -160,13 +160,17 @@ background: radial-gradient(farthest-side at 80% 80%, #FF333D, #F87015, #541283f
 
 @media only screen and (max-width:768px){
   .left-side {
-    padding-top: 55px;
-    padding-left: 0px;
-    width: 400px;
-    padding-right: 66px;
+    width: 545px !important;
+    padding-top: 45px;
+    padding-left: 3px;
+    padding-right: 4px;
   }
   .left-side h1 {
     font-size: 38px;
+}
+.header {
+  height: 75vh;
+  width: 100%;
 }
 
 }
