--- a/src/components/Brand/Brancd.css
+++ b/src/components/Brand/Brancd.css
@@ -12,10 +12,23 @@
 .slider:focus{
     outline: none;
 }
+.slidersWraps{
+
+}
 @media screen and (max-width:1024px){
     .brandWrap{
         width:100%;
     
+}
+
+
+}
+@media screen and (max-width:500px){  
+
+.slider img {
+    width: 200px !important;
+    margin-top: -51px;
+    margin-bottom: -32px;
 }
 
 }
