--- a/src/components/TimeLine/SwiperTimeLine.css
+++ b/src/components/TimeLine/SwiperTimeLine.css
@@ -187,3 +187,13 @@
   display: none;
 }
 }
+@media only screen and (max-width:400px) {
+  .circleWrap {
+    justify-content: center;
+}
+.circle {
+  width: 120px;
+  height: 120px;
+}
+  
+}
