--- a/src/components/WhoWeAre/WhoWeare.css
+++ b/src/components/WhoWeAre/WhoWeare.css
@@ -43,11 +43,19 @@
         display: none;
      }
 }
+@media only screen and (max-width:768px){
+    .whoWeareWrap {
+        margin-top: -14px;
+        padding: 0 20px;
+    }
+}
+
 @media only screen and (max-width:500px){
    
     .whoWeareWrap{
         margin-top:70px;
         padding: 0 20px;
     }
+   
 }
 
