--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -1,30 +1,45 @@
 .portfolioHeroSection {
     width: 100%;
-    height: 65vh;
+    height: 55vh;
     position: relative;
-  background: radial-gradient(farthest-side at 80% 80%, #FF333D, #F87015, #541283fb, #F87015, #951FE8, #F87015);
-    animation: heroBackground 20s ease-in-out infinite;
     background-size: 300% 300%;
+    background-image: url("../../../public/assets/web2.jpg");
   
   }
-.portfolioHeroSection:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 200px;
-    background: white;
-    left: 0;
-    bottom: 0;
-    clip-path: polygon(0px 10%, 0 100%, 100% 100%);
-    
+  .portfolioHeroSection:after{
+    content: '';
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background: #541283fb;
+    opacity: 0.7;
   }
+
 .portfolioWrap{
     width:1300px;
     height:auto;
     margin: 30px auto;
     
 }
-
+.portfolioContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 99;
+    color: white;
+    width: 600px;
+    margin: 0 auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
 .tabWrap{
     width: 100%;
     margin: 0 auto;
@@ -147,8 +162,17 @@
     }
     
 }@media only screen and (max-width:500px){
+    .portfolioHeroSection {
+        height: 50vh;
+      
+      }
     .singlePortfolio {
         width:350px;
+    }
+    .portfolioContent {
+        width: 100%;
+        padding: 0 10px;
+        margin-top:20px;
     }
     
 }
