--- a/src/pages/Shared/Footer/Footer.css
+++ b/src/pages/Shared/Footer/Footer.css
@@ -130,6 +130,9 @@
         justify-content:center
     
     }
+    .footerWrap {
+        margin-top: 60px;
+    }
     .contactUs {
         flex-wrap: wrap;
     }
@@ -190,5 +193,18 @@
         width: 100%;
         padding: 0px 5px;
     }
+    .footerTop {
+        padding: 0px 10px;
+    }
+    .footerWrap {
+        padding: 0px 10px;
+    }
    
 }
+@media only screen and (max-width:400px){
+    .rightSideImgWRap {
+        width: 92%;
+    }
+    
+}
+
