--- a/src/components/Brand/Brancd.css
+++ b/src/components/Brand/Brancd.css
@@ -23,6 +23,13 @@
 
 
 }
+@media screen and (max-width:768px){
+    .brandWrap {
+        width: 100%;
+        margin-bottom: 92px;
+    }
+    
+    }
 @media screen and (max-width:500px){  
 
 .slider img {
@@ -30,5 +37,4 @@
     margin-top: -51px;
     margin-bottom: -32px;
 }
-
 }
