--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -273,6 +273,9 @@ img {
   .aboutContent {
     padding-right: 40px;
 }
+.aboutLeftContainer {
+  left: 46px;
+}
 }
 
 @media (min-width: 768px) {
@@ -370,6 +373,9 @@ img {
 }
 .teamImg5 {
     width: 191px !important;
+}
+.aboutLeftContainer {
+  left: 46px;
 }
 
 }
