--- a/src/pages/Home/CountDown/CountDown.css
+++ b/src/pages/Home/CountDown/CountDown.css
@@ -1,16 +1,39 @@
+
+.featured-item{
+    background-image: url(../../../../public/assets/technical.webp);
+    position:relative;
+    height:500px;
+    width:100%;
+    margin:50px auto;
+    margin-bottom:80px;
+}
+.featured-item:after{
+    content:'';
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+    background-color:black;
+    opacity: 0.5;
+}
 .portFolioExample{
-    width:1300px;
-    margin:150px auto;
-    padding:0 35px;
+    position: absolute;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .countDownWrap{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     place-items: center;
-    margin-bottom: 120px;
-    gap: 0px;
-    width: 1000px;
+    gap: 15px;
     margin: 0 auto;
+  
+
 }
 .countdown{
     display: flex;
@@ -18,17 +41,20 @@
     justify-content: center;
     text-align: center;
     align-items: center;
-    width: 200px;
+    width: 260px;
     aspect-ratio: 1/1;
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
     transition: all .9s cubic-bezier(0.54, 0.49, 0.83, 0.76);
+    background-color: #F8761F;
+    color:white;
     
 }
 .countdown:hover{
     background:#951FE8;
     color:white;
+   
 }
 .countdown:hover .singleCountDown{
     color:white !important;
@@ -42,7 +68,7 @@ top:-50px;
 }
 .singleCountDown{
     display: flex;
-    color: #951FE8;
+    color: ehite;
     font-size: 75px;
     font-weight: bold;
     transition: all .9s cubic-bezier(0.54, 0.49, 0.83, 0.76);
@@ -73,14 +99,15 @@ top:-50px;
     
     .singleCountDown {
         display: flex;
-        color: #951FE8;
-        font-size: 70px;
+        font-size: 60px;
         font-weight: bold;
     }
     .portFolioExample{
-      margin-top:100px;
-      padding:0 10px;
+      margin-top:20px;
 
+    }
+    .featured-item{
+        height:600px;
     }
 }
 @media only screen and (max-width:500px){
@@ -108,5 +135,8 @@ top:-50px;
     }
     .singleCountDown {
         font-size: 35px;
+    }
+    .featured-item{
+        height:480px;
     }
 }
