--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -154,6 +154,9 @@
     .singlePortfolio {
         width: 330px;
     }
+    .singlePortfolio {
+        width: 500px;
+    }
     
 }
 @media only screen and (max-width:768px){
