--- a/src/pages/SingleService/SingleService.css
+++ b/src/pages/SingleService/SingleService.css
@@ -72,12 +72,18 @@
         width:100%;
         margin-top: 35px;
     }
+    .singleServicePortFolio{
+        width:320px !important;
+    }
      
 }
 @media only screen and (max-width:768px){
 
 .servicesContents {
     top: 130px;
+}
+.singleServicePortFolio{
+    width:370px !important;
 }
 
 .singleServicesWrap{
