--- a/src/index.css
+++ b/src/index.css
@@ -128,8 +128,16 @@ table {
 .drawwerLeftSide {
     width: 24% !important;
 }
-  
-
+input:focus, textarea:focus{
+    outline: none;
+}
+.countdown > * {
+    overflow-y: visible !important;
+}
+.countdown > *:before {
+    position: relative;
+    content: "" !important;
+}
 @media only screen and (max-width:1024px){
     .css-lfwcke-MuiTabs-flexContainer {
         display: flex !important;
