--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -28,10 +28,10 @@
 .sticky {
   width: 1300px;
   margin: 0 auto;
-  background: white;
+  background: linear-gradient(to right, #541283fb, #ff5400);
   width: 100%;
-  color: black;
-  box-shadow: #f87015 0px 5px 15px;
+  color: white ;
+  /* box-shadow: #f87015 0px 5px 15px; */
   position: fixed;
   top: 0;
   left: 0;
@@ -40,7 +40,7 @@
 }
 .sticky .navbar-list,
 .sticky .logo {
-  color: #f87015 !important;
+  color: white !important;
 }
 
 .navbar-list li::after {
@@ -114,6 +114,7 @@
     position: absolute;
     top: 20px;
     right: 30px;
+    z-index: 999999;
   }
   .bar div {
     position: relative;
@@ -127,7 +128,7 @@
     transition: all 0.5s linear(-0.47 -53.68%, 1 100%);
   }
   .sticky .bar span {
-    background-color: #f76300;
+    background-color: #fff;
   }
   .bar1 {
     transform: rotate(-45deg);
